--- a/npcs/the_monster.yaml
+++ b/npcs/the_monster.yaml
@@ -482,7 +482,7 @@ npc:
     - Intimidation
   special-abilities:
   - title: Note
-  - contnet: If Roderick regains his mind use the following stats
+  - content: If Roderick regains his mind use the following stats
   - abilities:
     - title: str
     - content: 20
