--- a/npcs/the_phantom.yaml
+++ b/npcs/the_phantom.yaml
@@ -684,9 +684,9 @@ npc:
   - title: Special Equipment
   - abilities:
     - title: Holy Avenger Longsword
-             You gain a +3 bonus to Attack and Damage Rolls made with this Magic Weapon. When you hit a fiend or an Undead with it, that creature takes an extra 2d10 radiant damage. While you hold the drawn sword, it creates an aura in
-             a 10-foot radius around you. You and all Creatures friendly to you in the aura have advantage on Saving Throws against Spells and other magical Effects. If you have 17 or more levels in the Paladin class, the radius of the
-             aura increases to 30 feet.
+    - content: You gain a +3 bonus to Attack and Damage Rolls made with this Magic Weapon. When you hit a fiend or an Undead with it, that creature takes an extra 2d10 radiant damage. While you hold the drawn sword, it creates an aura in
+               a 10-foot radius around you. You and all Creatures friendly to you in the aura have advantage on Saving Throws against Spells and other magical Effects. If you have 17 or more levels in the Paladin class, the radius of the
+               aura increases to 30 feet.
     - title: Angelic Longbow
     - content: You gain a +2 bonus to attack and damage rolls made with this weapon. An angelic bow has 3 charges. When you hit a creature you can expend a charge to deal an additional 1d10 fire, lightning, or radiant damage. 
                The bow regains 1d3 charges daily at dawn. If you hit a fiend or undead with the angelic bow, it deals an additional 1d10 radiant damage
